--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,19 @@
 	font-family: 'El Messiri', sans-serif;
 }
 
+
+.containerSel {
+	width: 70% ;
+	align-items: center;
+	display: inline-flex;
+}
+
+.fex {
+	width: 100%;
+	left: 1px;
+	right: 1px;
+}
+
 .container2 {
   display: block;
   position: relative;
@@ -217,6 +230,10 @@ input, select, textarea {
 		margin-bottom: 2em;
 	}
 
+				.one {
+					max-width: 80%;
+				}
+
 /* Container */
 
 	.container {
@@ -254,6 +271,20 @@ input, select, textarea {
 			.container {
 				width: 100%;
 			}
+			
+			.containerSel {
+				width: 100% ;
+				align-items: center;
+				display: inline;
+			}
+			
+			.fex {
+				width: 100%;
+				left: 0px;
+				right: 0px;
+			}
+			
+
 
 		}
 
@@ -1526,18 +1557,20 @@ input, select, textarea {
 
 	form input[type="text"],
 	form input[type="email"],
+	form input[type="number"],
 	form input[type="password"],
 	form select,
 	form textarea {
 		-webkit-appearance: none;
 		display: block;
-		width: 50%;
+		width: 60%;
 		border-radius: 8px;
 		border: solid 2px #eee;
 	}
 
 		form input[type="text"]:focus,
 		form input[type="email"]:focus,
+		form input[type="number"]:focus,
 		form input[type="password"]:focus,
 		form select:focus,
 		form textarea:focus {
@@ -1546,6 +1579,7 @@ input, select, textarea {
 
 	form input[type="text"],
 	form input[type="email"],
+	form input[type="number"],
 	form input[type="password"] {
 		line-height: 3em;
 		padding: 0 1em;
@@ -1656,6 +1690,7 @@ input, select, textarea {
 	input[type="button"],
 	input[type="submit"],
 	input[type="reset"],
+	input[type="file"],
 	button,
 	.button {
 		-moz-transition: background-color .25s ease-in-out;
@@ -1680,6 +1715,7 @@ input, select, textarea {
 		input[type="button"].icon:before,
 		input[type="submit"].icon:before,
 		input[type="reset"].icon:before,
+		input[type="file"]>icon:before,
 		button.icon:before,
 		.button.icon:before {
 			position: relative;
@@ -1690,6 +1726,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		input[type="submit"]:hover,
 		input[type="reset"]:hover,
+		input[type="file"]:hover,
 		button:hover,
 		.button:hover {
 			background: #10a0d5;
@@ -1698,6 +1735,7 @@ input, select, textarea {
 		input[type="button"]:active,
 		input[type="submit"]:active,
 		input[type="reset"]:active,
+		input[type="file"]:active,
 		button:active,
 		.button:active {
 			background: #20b0e5;
@@ -1706,6 +1744,7 @@ input, select, textarea {
 		input[type="button"].alt,
 		input[type="submit"].alt,
 		input[type="reset"].alt,
+		input[type="file"].alt,
 		button.alt,
 		.button.alt {
 			background: #f1f1f1;
@@ -1716,6 +1755,7 @@ input, select, textarea {
 			input[type="button"].alt:hover,
 			input[type="submit"].alt:hover,
 			input[type="reset"].alt:hover,
+			input[type="file"].alt:hover,
 			button.alt:hover,
 			.button.alt:hover {
 				background: #e8e8e8;
@@ -1725,6 +1765,7 @@ input, select, textarea {
 			input[type="button"].alt:active,
 			input[type="submit"].alt:active,
 			input[type="reset"].alt:active,
+			input[type="file"].alt:active,
 			button.alt:active,
 			.button.alt:active {
 				background: #e4e4e4;
@@ -1734,6 +1775,7 @@ input, select, textarea {
 		input[type="button"].large,
 		input[type="submit"].large,
 		input[type="reset"].large,
+		input[type="file"].large,
 		button.large,
 		.button.large {
 			font-size: 2.25em;
@@ -2251,6 +2293,7 @@ input, select, textarea {
 			input[type="button"],
 			input[type="submit"],
 			input[type="reset"],
+			input[type="file"],
 			button,
 			.button {
 				width: 100%;
@@ -2262,6 +2305,7 @@ input, select, textarea {
 				input[type="button"].icon,
 				input[type="submit"].icon,
 				input[type="reset"].icon,
+				input[type="file"].icon,
 				button.icon,
 				.button.icon {
 					padding-right: 0.75em !important;
@@ -2270,6 +2314,7 @@ input, select, textarea {
 					input[type="button"].icon:before,
 					input[type="submit"].icon:before,
 					input[type="reset"].icon:before,
+					input[type="file"].icon:before,
 					button.icon:before,
 					.button.icon:before {
 						margin-right: 0.5em;
@@ -2520,6 +2565,15 @@ input, select, textarea {
 				line-height: 2em;
 			}
 
+	form input[type="text"],
+	form input[type="email"],
+	form input[type="number"],
+	form input[type="password"],
+	form select,
+	form textarea {
+		width: 80%;
+	}
+
 			h2, h3, h4, h5, h6 {
 				font-size: 13pt;
 				margin: 0 0 1em 0;
@@ -2569,6 +2623,7 @@ input, select, textarea {
 			input[type="button"],
 			input[type="submit"],
 			input[type="reset"],
+			input[type="file"],
 			button,
 			.button {
 				width: 100%;
@@ -2580,6 +2635,7 @@ input, select, textarea {
 				input[type="button"].icon,
 				input[type="submit"].icon,
 				input[type="reset"].icon,
+				input[type="file"].icon,
 				button.icon,
 				.button.icon {
 					padding-right: 0.75em !important;
@@ -2588,6 +2644,7 @@ input, select, textarea {
 					input[type="button"].icon:before,
 					input[type="submit"].icon:before,
 					input[type="reset"].icon:before,
+					input[type="file"].icon:before,
 					button.icon:before,
 					.button.icon:before {
 						margin-right: 0.5em;
@@ -2717,5 +2774,6 @@ input, select, textarea {
 			#copyright {
 				text-align: left;
 			}
+
 
 	}
