nav-contact-loginSign

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,11 @@
 	align-items: center;
 	display: inline-flex;
 }
+hr{
+	
+
+	border: 1px solid rgba(0, 0, 0, 0.2);
+}
 
 .fex {
 	width: 100%;
@@ -31,6 +36,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+ 
 }
 
 .container2 input {
@@ -1654,8 +1660,10 @@ input, select, textarea {
 
 		.image img {
 			display: block;
-			width: 100%;
+			width: 80%;
 			border-radius: 8px;
+			
+			
 		}
 
 		.image.fit {
@@ -1837,7 +1845,7 @@ input, select, textarea {
 	}
 
 		ul.menu li {
-			border-left: solid 1px #e0e0e0;
+			border-left: solid 1px #ffffff;
 			display: inline-block;
 			padding: 0 0 0 0.75em;
 			margin: 0 0 0 0.75em;
@@ -1856,6 +1864,7 @@ input, select, textarea {
 		border-radius: 6px;
 		box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.05);
 		padding: 2em;
+
 	}
 
 		.box.feature {
@@ -1863,7 +1872,7 @@ input, select, textarea {
 		}
 
 			.box.feature .inner {
-				padding: 4em 2em 3em 2em;
+				padding: 1em 2em 0em 2em;
 			}
 
 			.box.feature h2 {
@@ -2039,6 +2048,7 @@ input, select, textarea {
 		right: 0;
 		top: 0;
 		font-size: 0.9em;
+		
 	}
 
 		#nav ul {
@@ -2057,12 +2067,16 @@ input, select, textarea {
 					-webkit-transition: background-color .25s ease-in-out;
 					-ms-transition: background-color .25s ease-in-out;
 					transition: background-color .25s ease-in-out;
-					font-weight: 800;
 					letter-spacing: 0.025em;
 					color: #696969;
 					text-decoration: none;
 					border-radius: 6px;
 					padding: 0.5em 1em 0.5em 1em;
+					color: #000000;
+					font-style: normal;
+					font-weight: normal;
+					font-size: 18px;
+					line-height: 21px;
 				}
 
 				#nav ul li > ul {
