--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,7 +79,7 @@ hr{
   top: 5px;
   width: 5px;
   height: 10px;
-  border: solid white;
+  border: solid rgb(0, 0, 0);
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
@@ -147,7 +147,7 @@ input, select, textarea {
 
 	body {
 
-		background-color: #efefef;
+		background-color: #f5f5f5;
 		background-position: top left, top left;
 		background-repeat: repeat-x, repeat;
 		background-size: 100% 30em, auto;
@@ -227,7 +227,7 @@ input, select, textarea {
 	}
 
 	blockquote {
-		border-left: solid 0.5em #eee;
+		border-left: solid 0.5em rgb(253, 253, 253);
 		padding: 1em 0 1em 2em;
 		font-style: italic;
 	}
@@ -1869,6 +1869,8 @@ input, select, textarea {
 
 		.box.feature {
 			padding: 0;
+			
+			
 		}
 
 			.box.feature .inner {
@@ -2077,6 +2079,7 @@ input, select, textarea {
 					font-weight: normal;
 					font-size: 18px;
 					line-height: 21px;
+					
 				}
 
 				#nav ul li > ul {
@@ -2084,7 +2087,8 @@ input, select, textarea {
 				}
 
 				#nav ul li:hover a, #nav ul li:hover span {
-					background: #fff;
+					background: rgb(255, 255, 255);
+					border-bottom: 1px solid rgb(0, 0, 0);
 				}
 
 				#nav ul li.active a, #nav ul li.active span {
@@ -2112,7 +2116,7 @@ input, select, textarea {
 	}
 
 		.dropotron li {
-			border-top: solid 1px #eee;
+			border-top: solid 1px rgb(0, 0, 0);
 			line-height: 3em;
 			padding-left: 0;
 		}
@@ -2215,6 +2219,8 @@ input, select, textarea {
 		color: #aaa;
 		padding: 4em 0 0 0;
 		text-align: center;
+		width: 189px;
+
 	}
 
 		#copyright a {
@@ -2791,3 +2797,116 @@ input, select, textarea {
 
 
 	}
+
+
+
+
+
+
+
+
+	body{
+		line-height: 1.5;
+		font-family: 'Poppins', sans-serif;
+	}
+	*{
+		margin:0;
+		padding:0;
+		box-sizing: border-box;
+	}
+	.container{
+		max-width: 1170px;
+		margin:auto;
+	}
+	.row{
+		display: flex;
+		flex-wrap: wrap;
+	}
+	ul{
+		list-style: none;
+	}
+	.footer{
+		background-color: #24262b;
+		padding: 70px 0;
+	}
+	.footer-col{
+	   width: 25%;
+	   padding: 0 15px;
+	}
+	.footer-col h4{
+		font-size: 18px;
+		color: #ffffff;
+		text-transform: capitalize;
+		margin-bottom: 35px;
+		font-weight: 500;
+		position: relative;
+	}
+	.footer-col h4::before{
+		content: '';
+		position: absolute;
+		left:0;
+		bottom: -10px;
+		background-color: #961111;
+		height: 2px;
+		box-sizing: border-box;
+		width: 50px;
+	}
+	.footer-col ul li:not(:last-child){
+		margin-bottom: 10px;
+	}
+	.footer-col ul li a{
+		font-size: 16px;
+		text-transform: capitalize;
+		color: #ffffff;
+		text-decoration: none;
+		font-weight: 300;
+		color: #bbbbbb;
+		display: block;
+		transition: all 0.3s ease;
+	}
+	.footer-col ul li a:hover{
+		color: #ffffff;
+		padding-left: 8px;
+	}
+	.footer-col .social-links a{
+		display: inline-block;
+		height: 40px;
+		width: 40px;
+		background-color: rgba(255,255,255,0.2);
+		margin:0 10px 10px 0;
+		text-align: center;
+		line-height: 40px;
+		border-radius: 50%;
+		color: #ffffff;
+		transition: all 0.5s ease;
+	}
+	.footer-col .social-links a:hover{
+		color: #24262b;
+		background-color: #ffffff;
+	}
+	
+	/*responsive*/
+	@media(max-width: 767px){
+	  .footer-col{
+		width: 50%;
+		margin-bottom: 30px;
+	}
+	}
+	@media(max-width: 574px){
+	  .footer-col{
+		width: 100%;
+	}
+}
+
+.footer66{
+	position: relative;
+	
+	top: 60px;
+	direction: ltr;
+	
+}
+
+	
+	
+	
+	
