--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2906,7 +2906,222 @@ input, select, textarea {
 	
 }
 
+/*cart page*/
+
+#cart-container{
+overflow-x: auto;
+background: #fff;
+}
+
+#cart-container table{
+	border-collapse: collapse;
+	width: 100%;
+	table-layout: fixed;
+	white-space: nowrap;
+}
+
+#cart-container table thead{
+	font-weight: 700;
+}
+
+
+
+#cart-container table thead td{
+	color: #fff;
+	border: none;
+	padding:6px 0;
+}
+
+#cart-container table td{
+	border: 1px solid #000000;
+}
+
+#cart-container table td:nth-child(1){
+	width: 100px;
+	text-align: center;
+}
+
+#cart-container table td:nth-child(2),
+#cart-container table td:nth-child(3){
+	width: 100px;
+	text-align: center;
+}
+
+#cart-container table td:nth-child(4),
+#cart-container table td:nth-child(5),
+#cart-container table td:nth-child(6){
+	width: 100px;
+	text-align: center;
+}
+
+#cart-container table tbody img{
+width: 100px;
+height: 80px;	
+object-fit: cover;
+}
+
+#cart-container table tbody i{
+	color: #464545;
+}
+
+#cart-container table tbody td input{
+	width: 50px;
+	height: 30px;
+}
+
+.coupon>div,
+.total>div {
+	border: 1px solid #000;
+	margin: 6px;
+}
+
+.coupon h5,
+.total h5{
+	background: #404248;
+	color: #fff;
+	border: none;
+	padding:6px 3px;
+	font-weight: 700;
+	mix-blend-mode: darken;
+	margin: -1px;
+}
+
+.coupon p{
+	padding: 0 12px;
+	color: #000;
+}
+
+.coupon input{
+	padding: 0 12px;
+	height: 44px;
+	margin: 0 0 20px 12px;
+	transform: translate(-7px, 1px);
+}
+
+.total div>div{
+	padding: 0 12px;
 	
+}
+
+.total h6{
+	color:rgb(14, 14, 14);
+}
+
+.second-hr{
+background: #000;
+width: 100%;
+height: 1px;	
+}
+
+.total div>button{
+	margin: 0 12px 20px 0;
 	
+	justify-content: flex-end;
+
+}
+
+#cart-bottom{
+	background: #fff;
+}
+#cart-bottom .row{
+margin: 10px;
+}
+
+/*responsive*/
+@media(max-width: 1280px){
+#logo {
+    display: inline-block;
+    transform: translate(10px, 37px);
+}
+}
+	@media(max-width: 814px){
+		#logo {
+			display: inline-block;
+			transform: translate(1px, 3px);
+		}
+
+		.bo2{
+			width: 73px;
+			margin: -4px;
+		}
+		
+		.total div>button {
+			margin: 3px;
+			justify-content: flex-end;
+			width: 73px;
+			top: -10px;
+		}
+		table thead{
+			display: none;
+		}
+		table, tbody,tr,td{
+			display: block;
+			width: 100%;
+		}
+		table tr{
+			margin-bottom: 15px;
+		}
+		table td{
+			text-align: right;
+			padding-left: 50% ;
+			text-align: right;
+			position: relative;
+		}
+		#cart-container table{
+		transform: translate(-180px, 3px);
+		}
+		}
+
+
+		@media(max-width: 414px){
+			#cart-container table {
+				transform: translate(-98px, 3px);
+				
+			}
+			#logo {
+				display: inline-block;
+				transform: translate(1px, 3px);
+			}
+		}
+
+		@media(max-width: 375px){
+			.bo2{
+				width: 73px;
+				margin: -4px;
+			}
+			
+			.total div>button {
+				margin: 3px;
+				justify-content: flex-end;
+				width: 73px;
+				top: -10px;
+			}
+			table thead{
+				display: none;
+			}
+			table, tbody,tr,td{
+				display: block;
+				width: 100%;
+			}
+			table tr{
+				margin-bottom: 15px;
+			}
+			table td{
+				text-align: right;
+				padding-left: 50% ;
+				text-align: right;
+				position: relative;
+			}
+			#cart-container table{
+			transform: translate(-79px, 3px);
+			}
+			#logo {
+				display: inline-block;
+				transform: translate(10px, 3px);
+			}
+			}
+
+			
+			
 	
-	
+			
